--- a/index.html
+++ b/index.html
@@ -350,6 +350,8 @@
 
     <h2>Resultados</h2>
 
+    <p id="mensagemErro" style="color: red;">Responda todas as afirmações</p>
+
     <div class="resultado">
         <p id="resultadoCinza"></p>
     </div>
